# NomZip

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/niczip/include/: ExtendedTree.hpp  MapUtilities.hpp  NzTypes.hpp  ProbabilityModel.hpp  ProbabilityModelGenerator.hpp  ShannonFano.hpp  VectorUtilities.hpp
lib/niczip/src/: ProbabilityModelGenerator.cpp
lib/nomzip/include/: ExtendedTree.hpp  MapUtilities.hpp  ProbabilityModelGenerator.hpp  ShannonFano.hpp  VectorUtilities.hpp
lib/nomzip/src/: ProbabilityModelGenerator.cpp
src/: generate.cpp  zip.cpp
